Renamed project and improved documentation